	* Incremented the package version to 1.5.1.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke the 'IP' command when in non-NetworkManager
	mode.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Enabled support for DHCP when in non-NetworkManager mode.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke IPv4 address detection under NetworkManager.
2018-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 8:2:5.
	* Incremented the package version to 1.5.2.
2018-06-03 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHWifiConnection' class.
	* Added a 'WHCgiPost::wifiActive()' method.
	* Added a 'WHCgiWifiConnections()' method.
2018-06-19 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHConfig::wifiInterfaceName()' method.
	* Added a 'WHCgiPost::sendConnectWifiCommand()' method.
	* Added a 'WHCgiPost::sendDisonnectWifiCommand()' method.
2018-06-19 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 9:0:6.
	* Incremented the package version to 1.6.0.
2018-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in webhostd(8) that caused wifi connections to be
	incompletely removed.
2018-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 9:1:6.
	* Incremented the package version to 1.6.1.
2018-06-21 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::cpuinfoModelName()' method.
	* Added a 'WHCgiPost::cpuinfoHardware()' method.
	* Added a 'WHCgiPost::cpuinfoRevision()' method.
	* Added a 'WHCgiPost::cpuinfoSerial()' method.
2018-06-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 10:0:7.
	* Incremented the package version to 1.7.0.
2018-06-23 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHCgiPost::sendDisableIpCommand()' method.
	* Removed the 'WHCgiPost::dhcpActive()' method.
	* Added a 'WHCgiPost::interfaceMode()' method.