@@ -2,7 +2,7 @@
 //
 // Network information routines.
 //
-//   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+//   (C) Copyright 2016-2018 Fred Gleason <fredg@paravelsystems.com>
 //
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
@@ -30,7 +30,7 @@
 #include "whnetwork.h"
 
 void WHInterfaceInfo(uint64_t *mac,QHostAddress *addr,QHostAddress *mask,
-		     const QString &iface)
+		     QHostAddress *bcst,const QString &iface)
 {
   struct ifreq ifr;
   int index=0;
@@ -63,6 +63,10 @@ void WHInterfaceInfo(uint64_t *mac,QHostAddress *addr,QHostAddress *mask,
 	  mask->setAddress(ntohl(((struct sockaddr_in *)(&(ifr.ifr_netmask)))->
 				 sin_addr.s_addr));
 	}
+	if(ioctl(sock,SIOCGIFBRDADDR,&ifr)==0) {
+	  bcst->setAddress(ntohl(((struct sockaddr_in *)(&(ifr.ifr_broadaddr)))->
+				 sin_addr.s_addr));
+	}
 	close(sock);
 	return;
       }
@@ -78,8 +82,9 @@ QHostAddress WHInterfaceIPv4Address(const QString &iface)
   uint64_t mac;
   QHostAddress addr;
   QHostAddress mask;
+  QHostAddress bcst;
 
-  WHInterfaceInfo(&mac,&addr,&mask,iface);
+  WHInterfaceInfo(&mac,&addr,&mask,&bcst,iface);
   return addr;
 }
 
@@ -89,9 +94,22 @@ QHostAddress WHInterfaceIPv4Netmask(const QString &iface)
   uint64_t mac;
   QHostAddress addr;
   QHostAddress mask;
+  QHostAddress bcst;
 
-  WHInterfaceInfo(&mac,&addr,&mask,iface);
+  WHInterfaceInfo(&mac,&addr,&mask,&bcst,iface);
   return mask;
+}
+
+
+QHostAddress WHInterfaceIPv4Broadcast(const QString &iface)
+{
+  uint64_t mac;
+  QHostAddress addr;
+  QHostAddress mask;
+  QHostAddress bcst;
+
+  WHInterfaceInfo(&mac,&addr,&mask,&bcst,iface);
+  return bcst;
 }
 
 
@@ -100,42 +118,10 @@ uint64_t WHInterfaceMacAddress(const QString &iface)
   uint64_t mac;
   QHostAddress addr;
   QHostAddress mask;
+  QHostAddress bcst;
 
-  WHInterfaceInfo(&mac,&addr,&mask,iface);
+  WHInterfaceInfo(&mac,&addr,&mask,&bcst,iface);
   return mac;
-
-  /*  
-  struct ifreq ifr;
-  int index=0;
-  uint64_t mac;
-  int sock;
-  
-
-  if((sock=socket(PF_INET,SOCK_DGRAM,IPPROTO_IP))<0) {
-    return 0;
-  }
-  memset(&ifr,0,sizeof(ifr));
-  index=1;
-  ifr.ifr_ifindex=index;
-  while(ioctl(sock,SIOCGIFNAME,&ifr)==0) {
-    if(ioctl(sock,SIOCGIFHWADDR,&ifr)==0) {
-      mac=
-	((0xff&(uint64_t)ifr.ifr_ifru.ifru_hwaddr.sa_data[0])<<40)+
-	((0xff&(uint64_t)ifr.ifr_ifru.ifru_hwaddr.sa_data[1])<<32)+
-	((0xff&(uint64_t)ifr.ifr_ifru.ifru_hwaddr.sa_data[2])<<24)+
-	((0xff&(uint64_t)ifr.ifr_ifru.ifru_hwaddr.sa_data[3])<<16)+
-	((0xff&(uint64_t)ifr.ifr_ifru.ifru_hwaddr.sa_data[4])<<8)+
-	(0xff&(uint64_t)ifr.ifr_ifru.ifru_hwaddr.sa_data[5]);
-      if(iface==ifr.ifr_name) {
-	close(sock);
-	return mac;
-      }
-    }
-    ifr.ifr_ifindex=++index;
-  }
-  close(sock);
-  return 0;
-  */
 }
 
 
